kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-manager
  namespace: game-manager
spec:
  selector:
    app: game-manager
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 5000
  type: ClusterIP
